force-app/main/default/objects/TS_Finance_Widget__c/TS_Finance_Widget__c.object-meta.xml
<CustomObject>
    <label>TS Finance Widget</label>
    <nameField>
        <label>TS Finance Widget  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TS Finance Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>