force-app/main/default/objects/TS_Finance_Widget__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>Matters__c</referenceTo>
    <relationshipLabel>TS Finance Widgets</relationshipLabel>
    <relationshipName>TS_Finance_Widgets</relationshipName>
    <type>Lookup</type>
</CustomField>