force-app/main/default/objects/TS_Finance_Widget__c/fields/Matter_Id__c.field-meta.xml
<CustomField>
    <fullName>Matter_Id__c</fullName>
    <externalId>true</externalId>
    <label>Matter Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>