force-app/main/default/objects/TS_Finance_Widget__c/fields/Retainer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Amount__c</fullName>
    <formula>Matter__r.Retainer_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retainer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>