force-app/main/default/objects/TS_Finance_Widget__c/fields/Timesolv_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Timesolv_Project_Id__c</fullName>
    <label>Timesolv Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>