force-app/main/default/objects/TS_Finance_Widget__c/fields/Timesolv_Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Timesolv_Total_Expenses__c</fullName>
    <label>Timesolv Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>