force-app/main/default/objects/TS_Finance_Widget__c/fields/Timesolv_Total_WIP_Hours__c.field-meta.xml
<CustomField>
    <fullName>Timesolv_Total_WIP_Hours__c</fullName>
    <label>Timesolv Total WIP Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>