force-app/main/default/objects/TS_Finance_Widget__c/fields/Timesolv_Trust_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Timesolv_Trust_Account_Id__c</fullName>
    <formula>Matter__r.Client_Name__r.Timesolv_trustAccount_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timesolv Trust Account Id</label>
    <type>Text</type>
</CustomField>