force-app/main/default/objects/TS_Finance_Widget__c/fields/Timesolv_Trust_Replenish_To__c.field-meta.xml
<CustomField>
    <fullName>Timesolv_Trust_Replenish_To__c</fullName>
    <label>Timesolv Trust Replenish To</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>