force-app/main/default/objects/TS_Finance_Widget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Timesolv_Id__c</columns>
    <columns>Timesolv_Trust_Account_Id__c</columns>
    <columns>Timesolv_Trust_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>